bk_ida/gccida/c3/standard_80387_constant_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/standard_80387_constant_p/src/i386.c:4038:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = mode_class_0[v2]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/standard_80387_constant_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/standard_80387_constant_p/src/obj/i386.o] Error 1
